added 1 sec to 404 page

--- a/public/404.html
+++ b/public/404.html
@@ -133,14 +133,14 @@
     <br>
     <br>
     <br>
-    <p class="hidden-message"> > Congrats <span>DriveGuru</span> team! <br><br> > <span>Alison</span>, <span>Francesca</span>, <span>Leo</span>, and <span>Ved</span>, your hard work and dedication have made this project possible! <br><br> > Also, thank you to all the <span>teachers</span> who helped us during this journey!</p>
+    <p class="hidden-message"> > Congrats <span>DriveGuru</span> team! <br><br> > <span>Alison</span>, <span>Francesca</span>, <span>Leo</span> and <span>Ved</span>, your hard work and dedication have made this project possible! <br><br> > Also, thank you to all <span>Le Wagon teachers</span> and <span>staff</span> who helped and supported us during this journey!</p>
   </div>
 
   <script>
     setTimeout(function() {
       var hiddenMessage = document.querySelector('.hidden-message');
       hiddenMessage.style.display = 'block';
-    }, 4000);
+    }, 5000);
   </script>
 </body>
 </html>
